Fix broken video size when chat is closed on tablet/portrait mode

--- a/ui/src/screens/app.watch.home/style.css
+++ b/ui/src/screens/app.watch.home/style.css
@@ -28,8 +28,12 @@
   .watch-screen-video {
     flex-shrink: 1;
     padding-bottom: 0;
-    width: calc(100% - var(--player-chat-pane-width-portrait));
+    width: 100%;
     transition: 200ms all ease;
+  }
+
+  .watch-screen-video.is-chat-open {
+    width: calc(100% - var(--player-chat-pane-width-portrait));
   }
 }
 
